# BlueVein

./: .gitignore  Cargo.toml  Makefile  PKGBUILD.git  PKGBUILD.stable  README.md  README.ru.md  bluevein.install  default.nix  flake.nix
.github/workflows/: deploy.yml
linux/: Cargo.toml  bluevein-linux.service
linux/src/: main.rs
nix/: module.nix  package.nix
shared/: Cargo.toml
shared/src/: lib.rs
src/: bluetooth.rs  config.rs  efi.rs  logger.rs  main.rs  sync.rs
src/linux/: bluetooth.rs  mod.rs  monitor.rs
src/windows/: bluetooth.rs  mod.rs  monitor.rs  service.rs
systemd/: bluevein.service
windows/: Cargo.toml
windows/src/: main.rs
