[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"

# Платформо-специфичные зависимости
[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
hex = "0.4"