[package]
name = "bluevein-windows"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bluevein-windows"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
windows-service = "0.6.0"
anyhow = "1.0"
winreg = "0.55"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Security"
] }